--- a/.env
+++ b/.env
@@ -1,6 +1,9 @@
 # Environnement FedaPay : 'live' ou 'sandbox'
 FEDAPAY_ENV=live
 
+# FedaPay API
+FEDAPAY_SECRET_KEY=sk_live_1sB6yPHGzETYZ6coFVnKZVa7
+
 # Secret webhook fourni par le dashboard FedaPay
 FEDAPAY_WEBHOOK_SECRET=wh_live_FroCduCVd9yCZ9qxP7QKZdmx
 
@@ -9,3 +12,5 @@ EVENT_PRICE_XOF=100
 
 # Devise utilisée (XOF, CFA, FCFA)
 EVENT_CURRENCY=XOF
+
+CALLBACK_URL=https://ton-domaine.com/retour.html
